syntax = "proto3";

package user_service;

service UserService {
  rpc GetMatchedUsers(GetMatchedUsersRequest) returns (GetMatchedUsersResponse);
}

message GetMatchedUsersRequest {
  int32 user_id = 1;
}

message GetMatchedUsersResponse {
  repeated int32 matched_user_ids = 1;
}
